# sync-with-uv

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml  sync_uv_lock.py
.github/workflows/: build-and-publish.yml  ci.yml  deps-update.yml  weekly-ci.yml
docs/: index.md
src/sync_with_uv/: __init__.py  __main__.py  cli.py  dependency_line.py  repo_data.py  sync_with_uv.py
tests/: test_.py  test_cli.py  test_main.py  test_precommit.py  test_prek.py  test_prek_cli.py  test_repo_data.py  test_sync.py
tests/data/test_precommit_hook_runs_successfully/: .pre-commit-config.yaml
tests/test_precommit/: .pre-commit-config.yaml
